<resources>
    <string name="app_name">ParkSourcing</string>
    <string name="loading">Loading…</string>
    <string name="log_error_occurred">"Error occurred: "</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="web_client_id">AIzaSyDYAXoQ0iS7--KybQcNzKwm2L75c2LnMus</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_nav">NavActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="register_text">Registration gives you several benefits such as connecting with friends, leaving reviews and adding parkings. We won\'t post anything on your profile.</string>
    <string name="rent_your_place_text">Fill in a few quick details and then sit back to
watch the money roll in!</string>
    <string name="access_instructions_text">These details are only sent to drivers after they have booked your space!</string>
    <string name="title_activity_company_nav">CompanyNavActivity</string>
    <string name="setup_company_text">Fill in a few quick details and add your company to our system</string>

    <string name="reward_1">-5% on your next parking\n50 points</string>
    <string name="reward_2">-20% on your next parking\n150 points</string>
    <string name="reward_3">Free day pass\n300 points</string>
    <string name="reward_4">One week free parking\n500 points</string>
    <string name="create_offers_text">Fill in a few quick details and create your company offers for your customers"</string>


    <!--Titles-->
    <string name="login_title">Login</string>
    <string name="signup_title">Sign up</string>

    <!--Welcome messages-->
    <string name="splash_welcome_txt">ParkSource</string>
    <string name="login_welcome_txt">Hello there !\nWelcome Back</string>
    <string name="signup_welcome_txt">Hello there !\nWelcome to you</string>


    <!--Button labels-->
    <string name="login_btn_label">Login</string>
    <string name="signup_btn_label">Signup</string>

    <string name="login_label">" Login"</string>
    <string name="signup_label">" Signup"</string>

    <string name="login_fb_btn_label">"Login with Facebook"</string>
    <string name="signup_fb_btn_label">"Signup with Facebook"</string>

    <string name="get_started_btn_label">Get Started</string>

    <!--Edit Text hints-->
    <string name="email_address_hint">Email Address</string>
    <string name="full_name_hint">Full Name</string>
    <string name="password_hint">Password</string>


    <!--Misc texts-->
    <string name="forgot_password">Forgot password?</string>
    <string name="no_account">Don\’t have an account?</string>
    <string name="have_account">Have an account?</string>
    <string name="divider_or">OR</string>


</resources>