<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <RelativeLayout
            android:id="@+id/containerLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/toolbar"
            android:layout_margin="@dimen/container_layout_margin">

            <TextView
                android:id="@+id/signup_title"
                style="@style/LabelStyle"
                android:layout_marginTop="0dp"
                android:fontFamily="@font/sf_pro_display_medium"
                android:text="@string/signup_title"
                android:textColor="@color/orange" />

            <TextView
                android:id="@+id/signup_welcome_msg"
                style="@style/LabelStyle"
                android:layout_below="@id/signup_title"
                android:layout_marginTop="16dp"
                android:text="@string/signup_welcome_txt" />

            <EditText
                android:id="@+id/et_full_name"
                style="@style/EditTextStyle"
                android:layout_below="@id/signup_welcome_msg"
                android:layout_marginTop="16dp"
                android:hint="@string/full_name_hint"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/et_email_address"
                style="@style/EditTextStyle"
                android:layout_below="@id/et_full_name"
                android:layout_marginTop="16dp"
                android:hint="@string/email_address_hint"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/et_password"
                style="@style/EditTextStyle"
                android:layout_below="@id/et_email_address"
                android:layout_marginTop="16dp"
                android:hint="@string/password_hint"
                android:inputType="textPassword" />

            <CheckBox
                android:id="@+id/checkbox_register_user"
                android:layout_width="100dp"
                android:layout_height="80dp"
                android:layout_marginTop="350dp"
                android:text="User" />

            <CheckBox
                android:id="@+id/checkbox_register_company"
                android:layout_width="100dp"
                android:layout_height="80dp"
                android:layout_alignTop="@+id/checkbox_register_user"
                android:layout_toEndOf="@+id/checkbox_register_user"
                android:text="Company" />


            <Button
                android:id="@+id/btn_signup"
                style="@style/SolidButtonStyle"
                android:layout_width="match_parent"
                android:paddingTop="5dp"
                android:layout_below="@id/et_password"
                android:layout_marginTop="100dp"
                android:text="@string/signup_btn_label" />


            <RelativeLayout
                android:id="@+id/login_nav"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:gravity="center">

                <TextView
                    android:id="@+id/have_account"
                    style="@style/LabelStyle"
                    android:fontFamily="@font/sf_pro_display_medium"
                    android:text="@string/have_account"
                    android:textColor="@color/account"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textview_login"
                    style="@style/LabelStyle"
                    android:layout_toEndOf="@id/have_account"
                    android:clickable="true"
                    android:fontFamily="@font/sf_pro_display_medium"
                    android:text="@string/login_label"
                    android:textColor="@color/orange"
                    android:textSize="16sp" />
            </RelativeLayout>

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="295dp" />
        </RelativeLayout>


    </RelativeLayout>
</LinearLayout>