<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <RelativeLayout
            android:id="@+id/containerLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/toolbar"
            android:layout_margin="@dimen/container_layout_margin">

            <TextView
                android:id="@+id/login_title"
                style="@style/LabelStyle"
                android:layout_marginTop="0dp"
                android:fontFamily="@font/sf_pro_display_medium"
                android:text="@string/login_title"
                android:textColor="@color/orange" />

            <TextView
                android:id="@+id/login_welcome_msg"
                style="@style/LabelStyle"
                android:layout_below="@id/login_title"
                android:layout_marginTop="@dimen/layout_in_between_margins"
                android:text="@string/login_welcome_txt" />

            <EditText
                android:id="@+id/et_email_address"
                style="@style/EditTextStyle"
                android:layout_below="@id/login_welcome_msg"
                android:layout_marginTop="@dimen/layout_in_between_margins"
                android:hint="@string/email_address_hint"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/et_password"
                style="@style/EditTextStyle"
                android:layout_below="@id/et_email_address"
                android:layout_marginTop="@dimen/layout_in_between_margins"
                android:hint="@string/password_hint"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/forgot_password"
                style="@style/LabelStyle"
                android:layout_alignParentEnd="true"
                android:layout_below="@id/et_password"
                android:layout_marginTop="@dimen/layout_in_between_margins"
                android:fontFamily="@font/sf_pro_display_medium"
                android:text=""
                android:textColor="@color/orange"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btn_login"
                style="@style/SolidButtonStyle"
                android:layout_width="match_parent"
                android:layout_below="@id/forgot_password"
                android:layout_marginTop="@dimen/layout_in_between_margins"
                android:text="@string/login_btn_label" />

            <RelativeLayout
                android:id="@+id/sign_up_nav"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:gravity="center">

                <TextView
                    android:id="@+id/no_account"
                    style="@style/LabelStyle"
                    android:fontFamily="@font/sf_pro_display_medium"
                    android:text="@string/no_account"
                    android:textColor="@color/account"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/sign_up"
                    style="@style/LabelStyle"
                    android:layout_toEndOf="@id/no_account"
                    android:clickable="true"
                    android:fontFamily="@font/sf_pro_display_medium"
                    android:text="@string/signup_label"
                    android:textColor="@color/orange"
                    android:textSize="16sp" />
            </RelativeLayout>

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/btn_login"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/layout_in_between_margins"
                android:visibility="invisible" />
        </RelativeLayout>


    </RelativeLayout>
</LinearLayout>